2014-10-24 belangeo <belangeo@gmail.com>

    * Added new object: FToM, converts an audio stream containning frequencies in hertz to a midi note audio stream.
    - rev 1259

2014-10-23 belangeo <belangeo@gmail.com>

    * Added new function: hzToMidi, converts a frequency in hertz to a midi note value.
    - rev 1258

-------------------------------------------------------------------------------------

2014-10-17 belangeo <belangeo@gmail.com>

    * Release tag: 0.7.2.
    - rev 1256

2014-10-16 belangeo <belangeo@gmail.com>

    * Server.setMidiInputDevice(idx) with `idx` greater than the higher portmidi input index opens all available devices.
    - rev 1254

2014-10-16 belangeo <belangeo@gmail.com>

    * OSX installer: Also install pyo in anaconda site-packages directory if exist.
    - rev 1253

2014-10-16 belangeo <belangeo@gmail.com>

    * Added new object : TrigBurst, generates a time/amplitude expandable trigger pattern.
    - rev 1252

2014-10-14 belangeo <belangeo@gmail.com>

    * Added new object : Euclide, Euclidean rhythm generator.
    - rev 1251

2014-10-13 belangeo <belangeo@gmail.com>

    * Windows installers now check for the current python installation directory before installing files.
    - rev 1244 - 1250

2014-10-10 belangeo <belangeo@gmail.com>

    * E-Pyo: Fixed inconsistencies in Find/Replace behaviours.
    - rev 1241

2014-10-10 belangeo <belangeo@gmail.com>

    * Added new object : SmoothDelay, a delay line that does not produce clicks or pitch shifting when the delay time is changing.
    - rev 1239

2014-10-08 belangeo <belangeo@gmail.com>

    * Added new object : AttackDetector, audio signal onset detection.
    - rev 1238

2014-10-07 belangeo <belangeo@gmail.com>

    * Added new object : Centroid, Computes the spectral centroid of an input signal.
    - rev 1237

-------------------------------------------------------------------------------------

2014-08-29 belangeo <belangeo@gmail.com>

    * Release tag: 0.7.1.